--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
+include ':ble_mesh-android_api-v2_low-release'
+include ':ble_mesh-android_api-v2_high-release'
 include ':app'
 rootProject.name = "Fire Mesh"
