clean architecture frame

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
+include ':ble-mesh-core'
+include ':data'
+include ':domain'
 include ':ble_mesh-android_api-v2_low-release'
 include ':ble_mesh-android_api-v2_high-release'
 include ':app'
