--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
 
-    //BLE Mesh Libs
-    implementation project(path: ':ble_mesh-android_api-v2_high-release')
-    implementation project(path: ':ble_mesh-android_api-v2_low-release')
+    //Import Module
+    implementation project(':domain')
+    implementation project(':data')
+    implementation project(':ble-mesh-core')
     implementation 'com.google.code.gson:gson:2.8.6'
+    //Rx Java/RxAndroid
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
     //Dagger 2
     implementation 'com.google.dagger:dagger:2.27'
     implementation 'com.google.dagger:dagger-android:2.27'
@@ -59,7 +63,6 @@ dependencies {
     implementation 'com.github.ajalt:timberkt:1.5.1'
     //Live data
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-
     //Test Libs
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
