--- a/ble-mesh-core/build.gradle
+++ b/ble-mesh-core/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
     implementation project(':data')
+    implementation project(':domain')
+
 }
