--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:required="true" />
 
     <application
+        android:hardwareAccelerated="true"
         android:name=".myapp.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +20,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FireMesh">
-        <activity android:name=".presentation.splash.SplashActivity">
+        <activity
+            android:noHistory="true"
+            android:name=".presentation.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
