--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     //Import Module
     implementation project(':ble-mesh-core')
+    implementation project(':sweetDialog')
     implementation 'com.google.code.gson:gson:2.8.6'
     //Rx Java/RxAndroid
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
