--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation 'com.github.ajalt:timberkt:1.5.1'
     //Live data
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    //GSon
+    implementation 'com.google.code.gson:gson:2.8.6'
     //Test Libs
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
