--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ceslab.firemesh">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -19,7 +20,8 @@
 
 
     <application
-        android:hardwareAccelerated="true"
+        tools:replace="android:icon"
+    android:hardwareAccelerated="true"
         android:name=".myapp.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
