--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,9 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     //GSon
     implementation 'com.google.code.gson:gson:2.8.6'
-    //
+
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
 
     //Test Libs
     testImplementation 'junit:junit:4.+'
