--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,9 @@
     android:hardwareAccelerated="true"
         android:name=".myapp.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_fire_mesh"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_fire_mesh_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FireMesh">
         <service android:name=".service.FireMeshService" android:enabled="true" />
