--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             </intent-filter>
         </receiver>
         <activity
+            android:screenOrientation="portrait"
             android:noHistory="true"
             android:name=".presentation.splash.SplashActivity">
             <intent-filter>
@@ -47,7 +48,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.main.activity.MainActivity"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".presentation.main.activity.MainActivity"/>
         <service android:name=".ota.service.OTAService" />
         <receiver android:name=".ota.service.OTAService$Receiver">
             <intent-filter>
